--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.udacity.sandwichclub.DetailActivity">
+    tools:context="com.udacity.sandwichclub.DetailActivity"
+    android:background="@color/colorTextArea">
 
     <ImageView
         android:id="@+id/image_iv"
@@ -20,45 +21,54 @@
 
     <ScrollView
         android:id="@+id/allText_sv"
-        android:layout_width="296dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:clipToPadding="true"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/image_iv"
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/description_label_tv"
-                android:layout_width="85dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/detail_description_label"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/description_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
+                android:background="@color/colorTextField"
+                android:text="@string/detail_desc_marker"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/description_label_tv"
                 app:layout_constraintTop_toBottomOf="@+id/description_label_tv" />
 
             <TextView
                 android:id="@+id/ingredients_tv"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ingredients"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:background="@color/colorTextField"
+                android:text="@string/detail_ingred_marker"
                 app:layout_constraintStart_toStartOf="@+id/ingredient_label_tv"
                 app:layout_constraintTop_toBottomOf="@id/ingredient_label_tv" />
 
@@ -75,51 +85,21 @@
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/aka_label_tv"
-        android:layout_width="wrap_content"
+    <include
+        android:id="@+id/aka_origin_tv"
+        layout="@layout/aka_and_origin"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/detail_also_known_as_label"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_iv" />
 
-    <TextView
-        android:id="@+id/also_known_tv"
-        android:layout_width="197dp"
-        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:text="aka"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/aka_label_tv"
-        app:layout_constraintTop_toBottomOf="@+id/aka_label_tv"
-        app:layout_constraintVertical_bias="0.13999999" />
-
-    <TextView
-        android:id="@+id/origin_label_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp"
-        android:text="@string/detail_place_of_origin_label"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/aka_label_tv"
-        app:layout_constraintTop_toTopOf="@+id/aka_label_tv" />
-
-    <TextView
-        android:id="@+id/origin_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:text="origin"
-        app:layout_constraintEnd_toEndOf="@+id/origin_label_tv"
-        app:layout_constraintStart_toStartOf="@+id/origin_label_tv"
-        app:layout_constraintTop_toBottomOf="@+id/origin_label_tv" />
-
+        app:layout_constraintEnd_toStartOf="@+id/allText_sv"
+        app:layout_constraintStart_toStartOf="@+id/image_iv"
+        app:layout_constraintTop_toBottomOf="@+id/image_iv" />
 
     <!--</View>-->
 </android.support.constraint.ConstraintLayout>
